[🐛 Fix] Remove absolute position of main on mobile

--- a/static/sass/index.sass
+++ b/static/sass/index.sass
@@ -49,6 +49,8 @@ main
 
 @media only screen and (max-width: 1060px)
   main
+    position: initial
+    margin-top: 89px
     .right
       display: none
     .left
